// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly return empty row Actions for Application 1`] = `
[
  {
    "click": [Function],
    "id": "view-application",
    "title": "View Application",
  },
  {
    "click": [Function],
    "id": "view-application-topology",
    "title": "View Application topology",
  },
  {
    "click": [Function],
    "id": "edit",
    "title": "Edit Application",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete Application",
  },
]
`;

exports[`Correctly return empty row Actions for restricted resource 1`] = `[]`;

exports[`Correctly return row Actions 1`] = `
[
  {
    "click": [Function],
    "id": "edit",
    "title": "Edit Pod",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete Pod",
  },
]
`;

exports[`Correctly return row Actions for Application in global search 1`] = `
[
  {
    "click": [Function],
    "id": "view-application",
    "title": "View Application",
  },
  {
    "click": [Function],
    "id": "view-application-topology",
    "title": "View Application topology",
  },
  {
    "click": [Function],
    "id": "edit",
    "title": "Edit Application",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete Application",
  },
]
`;
